support header for common HTTP response